Fix overlapping in widgets

--- a/app/assets/stylesheets/deep-insights/themes/scss/widgets/_list.scss
+++ b/app/assets/stylesheets/deep-insights/themes/scss/widgets/_list.scss
@@ -220,7 +220,6 @@
   }
 
   .CDB-Widget-listWrapper {
-    min-width: 320px;
     overflow-x: hidden;
   }
 
